# TableProvider

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
table_meets_llm/: unified_babel_convertor.sh  unified_benchmark_generate.sh
table_meets_llm/dataset_collection/: feverous.py  gittables.py  hybridqa.py
table_meets_llm/eval/: evaluate_benchmark.py  evaluate_benchmark.sh  evaluate_individual_tasks.py  evaluate_individual_tasks.sh
table_meets_llm/main/: config.py  unified_babel_convertor.py  unified_benchmark_generator.py
table_meets_llm/utils/: __init__.py  evaluate_tools.py  exp_concat.py  explore_dte.py  get_tables.py  merge_p2_inference.py  structured_data_linearize.py
table_provider/: __init__.py
table_provider/config/: default_azure_openai_config.json  default_limit_config.json
table_provider/config/entity/: azure_openai_config.py  (+1 more)
table_provider/controller/: table_provider_controller.py
table_provider/libs/: logger.py  output.py
table_provider/model/: table_provider_enum.py
table_provider/orchestrator/: extension_base.py  orchestrator_base.py
table_provider/prompt/: call_llm_prompt.py  task_specific_prompt.py
table_provider/route/: __init__.py  api.py
table_provider/service/: table_augmentation_service.py  table_format_service.py  table_loader_service.py  table_sampling_service.py  table_serializer_service.py
table_provider/utils/: __init__.py  combine_jsonl_files.py  decompose_combined_file.py  get_tables.py  load_file_helper.py  nlp_helper.py  type_value_convertor.py
test/: test_process_customed_json.py  test_table_provider_pipeline.py
(+60 files in other folders)
