[tool.poetry]
name = "table_provider"
version = "0.1.0"
description = "Table provider that provides table sampling, table augmentation and table format functions and interfaces"
authors = ["v-yihaoliu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appnope = "0.1.3"
asttokens = "2.2.1"
backcall = "0.2.0"
certifi = "2022.12.7"
decorator = "5.1.1"
executing = "1.2.0"
importlib-metadata = "6.5.0"
jedi = "0.18.2"
jupyter-client = "8.2.0"
matplotlib-inline = "0.1.6"
nest-asyncio = "1.5.6"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
prompt-toolkit = "3.0.38"
pure-eval = "0.2.2"
pygments = "2.15.1"
python-dateutil = "2.8.2"
six = "1.16.0"
stack-data = "0.6.2"
traitlets = "5.9.0"
wcwidth = "0.2.6"
zipp = "3.15.0"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
anyio = "3.6.2"
arrow = "1.2.3"
async-timeout = "4.0.2"
attrs = "22.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
datasets = "2.11.0"
evaluate = "0.4.0"
huggingface-hub = "0.13.4"
joblib = "1.2.0"
jsonlines = "3.1.0"
jsonschema = "4.17.3"
matplotlib = "3.7.1"
numpy = "^1.26.4"
openai = "^1.52.2"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
tabulate = "^0.9.0"
torch = "2.4.1"
tiktoken = "0.8.0"
transformers = "4.29.0"
wandb = "^0.18.5"
flask = "^3.0.3"
flask-restful = "^0.3.9"
langchain = "^0.3.7"
langchain_community = "^0.3.7"
azure-identity = "^1.19.0"
torch_scatter = "^2.1.2"
poetry = "^1.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
